--- a/index.html
+++ b/index.html
@@ -3,86 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rory Jacob Website</title>
-    <!--<link rel="stylesheet" href="./styles.css"> /-->
+    <title>a website</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-	<h1>My Website</h1>
-        <!-- Table of Contents -->
-        <aside class="toc">
-            <h2>Contents</h2>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </aside>
+	<div class="navigation inconsolata-regular">
+	<h1>artisinal website content</h1>
+		<!-- Table of Contents -->
+		<aside class="toc">
+		    <ul>
+			<li><a href="#about">about me</a></li>
+			<li><a href="#projects">projects</a></li>
+			<li><a href="#contact">contact</a></li>
+		    </ul>
+		</aside>
+	</div>
 
         <!-- Main Content Area -->
-        <main class="content">
+        <main class="content inconsolata-regular">
             <section id="about">
-                <h2>About Me</h2>
-                <p>I am a Canadian Software Engineer living in Seattle. I like playing excercising, music, sailing, hosting elaborate events and spending too much time on side projects.</p>
-		<div class="circle">
+                <h2>about me</h2>
+		<div class="circular-photo centre">
 			<img src="./resources/me.jpeg"/>
 		</div>
+                <p>I am a Canadian Software Engineer living in Seattle. I like playing excercising, music, sailing, hosting elaborate events and random side projects.</p>
             </section>
 
             <section id="projects">
-                <h2>Projects</h2>
+                <h2>projects</h2>
 		<li>
-			<p class="project-name">pig pit</p>
+			<p class="project-name inconsolata-bold">pig pit</p>
 			<p class="project-desc">Pig pit is a yearly large potluck, music festival, event thrown by myself and my friend Elliot. The event started in 2021, and with the 
 			fourth one being held on July 27th, 2024. This website was created for <i>Pig Pit 4: Ground Hog Day</i>, with the main requirements being a place to show people
 			the details about the event, a page to thank our volunteers, and a page showing a breakdown of our costs for the event.
 			</p>
-			<a target="_blank" class="project-link" href="https://github.com/roryj/pigpitwebsite"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/pigpit</a>
-			<a target="_blank" class="project-link" href="https://pigpit.family">pigpit website</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/pigpitwebsite"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/pigpit</a>
+			<br/>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://pigpit.family">🐖🕳️ pigpit website</a>
 		</li>
 		<li>
-			<p class="project-name">photobooth</p>
+			<p class="project-name inconsolata-bold">photobooth</p>
 			<p class="project-desc">During the pandemic I needed a project to keep myself busy,
 			so in preparation of a halloween event hosted by a friend of mine, I built a very simple photobooth app. The app takes four photos, "spookifies" them by
 			applying random filters to each photo, and then generates a 1x4 image that can be printed from a photo printer. We have used this app at three Halloweens, as well
 			as our pig pit event.
 			</p>
-			<a target="_blank" class="project-link" href="https://github.com/roryj/photobomb"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/photobomb</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/photobomb"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/photobomb</a>
 		</li>
 		<li>
-			<p class="project-name">spooky tech</p>
+			<p class="project-name inconsolata-bold">spooky tech</p>
 			<p class="project-desc">This project is an all-in-one halloween house application. The app works as a client-server model. The server connects to all of the
 			sensors in the house (we use ring and hue sensors), and the clients connect to light bulbs, speakers and chromecast devices. With the opening and/or
 			closing of a door, we can trigger hand-crafted scenes; playing music, turning lights on and off, spooking our friends.</p>
-			<a target="_blank" class="project-link" href="https://github.com/jmattfong/Halloween"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>jmattfong/Halloween</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/jmattfong/Halloween"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>jmattfong/Halloween</a>
 		</li>
 		<li>
-			<p class="project-name">das-keyboard second screen</p>
+			<p class="project-name inconsolata-bold">das-keyboard second screen</p>
 			<p class="project-desc">At some point in 2018 I bought the [DasKeyboard 5Q](https://www.daskeyboard.com/p/5q-cloud-connected-rgb-mechanical-keyboard/), which was a keyboard with per-key programmable LEDs. The keyboard would run a
 			local server on your connected device which you could send http commands to change key colours. I built an app that you edit and program different images that
 			would scroll across the keyboard. The two base ones I had were a Canadian flag (of course), and a fish moving left to right.</p>
-			<a target="_blank" class="project-link" href="https://github.com/roryj/das-keyboard"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/das-keyboard</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/das-keyboard"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/das-keyboard</a>
 		</li>
 		<li>
-			<p class="project-name">samquest</p>
+			<p class="project-name inconsolata-bold">samquest</p>
 			<p class="project-desc">I wrote this as a demo for an AWS Lambda recruiting event back during my time on the team. The app is a turn based, multiplayer, choose
 			your own adventure on twitter, built completely on AWS Lambda, DynamoDB, and Amazon Kinesis. This was written back in 2017, back for the old twitter tweet API
 			and no longer works.</p>
-			<a target="_blank" class="project-link" href="https://github.com/roryj/samquest"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/samquest</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/samquest"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/samquest</a>
 		</li>
             </section>
 
             <section id="contact">
-                <h2>Contact</h2>
+                <h2>contact</h2>
 		<li>
-			<a target="_blank" class="project-link" href="https://github.com/roryj"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>@roryj</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>@roryj</a>
 		</li>
 		<li>
-			<a target="_blank" class="project-link" href="https://www.linkedin.com/in/rory-jacob-b2091854/"><svg height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"/></svg>roryjacob</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="https://www.linkedin.com/in/rory-jacob-b2091854/"><svg height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"/></svg>roryjacob</a>
 		</li>
 		<li>
-			<a target="_blank" class="project-link" href="mailto:me@roryj.ca"><svg height="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Proton Mail</title><path d="m15.24 8.998 3.656-3.073v15.81H2.482C1.11 21.735 0 20.609 0 19.223V6.944l7.58 6.38a2.186 2.186 0 0 0 2.871-.042l4.792-4.284h-.003zm-5.456 3.538 1.809-1.616a2.438 2.438 0 0 1-1.178-.533L.905 2.395A.552.552 0 0 0 0 2.826v2.811l8.226 6.923a1.186 1.186 0 0 0 1.558-.024zM23.871 2.463a.551.551 0 0 0-.776-.068l-3.199 2.688v16.653h1.623c1.371 0 2.481-1.127 2.481-2.513V2.824a.551.551 0 0 0-.129-.36z"/></svg>me@roryj.ca</a>
+			<a target="_blank" class="project-link inconsolata-bold" href="mailto:me@roryj.ca"><svg height="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Proton Mail</title><path d="m15.24 8.998 3.656-3.073v15.81H2.482C1.11 21.735 0 20.609 0 19.223V6.944l7.58 6.38a2.186 2.186 0 0 0 2.871-.042l4.792-4.284h-.003zm-5.456 3.538 1.809-1.616a2.438 2.438 0 0 1-1.178-.533L.905 2.395A.552.552 0 0 0 0 2.826v2.811l8.226 6.923a1.186 1.186 0 0 0 1.558-.024zM23.871 2.463a.551.551 0 0 0-.776-.068l-3.199 2.688v16.653h1.623c1.371 0 2.481-1.127 2.481-2.513V2.824a.551.551 0 0 0-.129-.36z"/></svg>me@roryj.ca</a>
 		</li>
             </section>
         </main>
