--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		 		<img src="./resources/me.jpeg"/>
 			</div>
 			<div class="bio">
-				<p>I am a Canadian Software Engineer living in Seattle. I like excercising, watching and playing music, sailing, hosting elaborate events and random side projects.</p>
+				<p>I am a Canadian Software Engineer living in Seattle. I like picking and putting down heavy weights,
+				watching and playing music, sailing, hosting elaborate events and working on over-engineered side projects.</p>
 			</div>
 		</section>
 	</div>
@@ -38,43 +39,62 @@
 		<ul class="projects">
 			<li>
 				<p class="project-name inconsolata-bold">pig pit</p>
-				<p class="project-desc">Pig pit is a yearly large potluck, music festival, event thrown by myself and my friend Elliot. The event started in 2021, and with the 
-				fourth one being held on July 27th, 2024. This website was created for <i>Pig Pit 4: Ground Hog Day</i>, with the main requirements being a place to show people
-				the details about the event, a page to thank our volunteers, and a page showing a breakdown of our costs for the event.
-				</p>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/pigpitwebsite"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/pigpit</a>
-				<br/>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://pigpit.family">🐖🕳️ pigpit website</a>
+				<div class="project-details">
+					<p class="project-desc">Pig pit is a yearly large potluck, music festival, event thrown by myself and my friend Elliot. The event started in 2021, and with the 
+					fourth one being held on July 27th, 2024. This website was created for <i>Pig Pit 4: Ground Hog Day</i>, with the main requirements being a place to show people
+					the details about the event, a page to thank our volunteers, and a page showing a breakdown of our costs for the event.
+					</p>
+					<div class="project-links">
+						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/pigpitwebsite"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/pigpit</a>
+						<a target="_blank" class="project-link inconsolata-bold" href="https://pigpit.family">🐖🕳️ pigpit website</a>
+					</div>
+				</div>
 			</li>
 			<li>
 				<p class="project-name inconsolata-bold">photobooth</p>
-				<p class="project-desc">During the pandemic I needed a project to keep myself busy,
-				so in preparation of a halloween event hosted by a friend of mine, I built a very simple photobooth app. The app takes four photos, "spookifies" them by
-				applying random filters to each photo, and then generates a 1x4 image that can be printed from a photo printer. We have used this app at three Halloweens, as well
-				as our pig pit event.
-				</p>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/photobomb"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/photobomb</a>
+				<div class="project-details">
+					<p class="project-desc">During the pandemic I needed a project to keep myself busy,
+					so in preparation of a halloween event hosted by a friend of mine, I built a very simple photobooth app. The app takes four photos, "spookifies" them by
+					applying random filters to each photo, and then generates a 1x4 image that can be printed from a photo printer. We have used this app at three Halloweens, as well
+					as our pig pit event.
+					</p>
+					<div class="project-links">
+						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/photobomb"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/photobomb</a>
+					</div>
+				</div>
 			</li>
 			<li>
 				<p class="project-name inconsolata-bold">spooky tech</p>
-				<p class="project-desc">This project is an all-in-one halloween house application. The app works as a client-server model. The server connects to all of the
-				sensors in the house (we use ring and hue sensors), and the clients connect to light bulbs, speakers and chromecast devices. With the opening and/or
-				closing of a door, we can trigger hand-crafted scenes; playing music, turning lights on and off, spooking our friends.</p>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/jmattfong/Halloween"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>jmattfong/Halloween</a>
+				<div class="project-details">
+					<p class="project-desc">This project is an all-in-one halloween house application. The app works as a client-server model. The server connects to all of the
+					sensors in the house (we use ring and hue sensors), and the clients connect to light bulbs, speakers and chromecast devices. With the opening and/or
+					closing of a door, we can trigger hand-crafted scenes; playing music, turning lights on and off, spooking our friends.</p>
+					<div class="project-links">
+						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/jmattfong/Halloween"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>jmattfong/Halloween</a>
+					</div>
+				</div>
 			</li>
 			<li>
 				<p class="project-name inconsolata-bold">das-keyboard second screen</p>
-				<p class="project-desc">At some point in 2018 I bought the <a target="_blank" href="https://www.daskeyboard.com/p/5q-cloud-connected-rgb-mechanical-keyboard/">DasKeyboard 5Q</a>, which is a keyboard with per-key programmable LEDs. The keyboard would run a
-				local server on your connected device which you could send http commands to change key colours. I built an app that you edit and program different images that
-				would scroll across the keyboard. The two base ones I had were a Canadian flag (of course), and a fish moving left to right.</p>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/das-keyboard"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/das-keyboard</a>
+				<div class="project-details">
+					<p class="project-desc">At some point in 2018 I bought the <a target="_blank" href="https://www.daskeyboard.com/p/5q-cloud-connected-rgb-mechanical-keyboard/">DasKeyboard 5Q</a>, which is a keyboard with per-key programmable LEDs. The keyboard would run a
+					local server on your connected device which you could send http commands to change key colours. I built an app that you edit and program different images that
+					would scroll across the keyboard. The two base ones I had were a Canadian flag (of course), and a fish moving left to right.</p>
+					<div class="project-links">
+						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/das-keyboard"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/das-keyboard</a>
+					</div>
+				</div>
 			</li>
 			<li>
 				<p class="project-name inconsolata-bold">samquest</p>
-				<p class="project-desc">I wrote this as a demo for an AWS Lambda recruiting event back during my time on the team. The app is a turn based, multiplayer, choose
-				your own adventure on twitter, built completely on AWS Lambda, DynamoDB, and Amazon Kinesis. This was written back in 2017, back for the old twitter tweet API
-				and no longer works.</p>
-				<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/samquest"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/samquest</a>
+				<div class="project-details">
+					<p class="project-desc">I wrote this as a demo for an AWS Lambda recruiting event back during my time on the team. The app is a turn based, multiplayer, choose
+					your own adventure on twitter, built completely on AWS Lambda, DynamoDB, and Amazon Kinesis. This was written back in 2017, back for the old twitter tweet API
+					and no longer works.</p>
+					<div class="project-links">
+						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/roryj/samquest"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>roryj/samquest</a>
+					</div>
+				</div>
 			</li>
 		</ul>
             </section>
@@ -92,7 +112,7 @@
 				<a target="_blank" class="project-link inconsolata-bold" href="https://soundcloud.com/user-823049989"><svg height="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>SoundCloud</title><path d="M23.999 14.165c-.052 1.796-1.612 3.169-3.4 3.169h-8.18a.68.68 0 0 1-.675-.683V7.862a.747.747 0 0 1 .452-.724s.75-.513 2.333-.513a5.364 5.364 0 0 1 2.763.755 5.433 5.433 0 0 1 2.57 3.54c.282-.08.574-.121.868-.12.884 0 1.73.358 2.347.992s.948 1.49.922 2.373ZM10.721 8.421c.247 2.98.427 5.697 0 8.672a.264.264 0 0 1-.53 0c-.395-2.946-.22-5.718 0-8.672a.264.264 0 0 1 .53 0ZM9.072 9.448c.285 2.659.37 4.986-.006 7.655a.277.277 0 0 1-.55 0c-.331-2.63-.256-5.02 0-7.655a.277.277 0 0 1 .556 0Zm-1.663-.257c.27 2.726.39 5.171 0 7.904a.266.266 0 0 1-.532 0c-.38-2.69-.257-5.21 0-7.904a.266.266 0 0 1 .532 0Zm-1.647.77a26.108 26.108 0 0 1-.008 7.147.272.272 0 0 1-.542 0 27.955 27.955 0 0 1 0-7.147.275.275 0 0 1 .55 0Zm-1.67 1.769c.421 1.865.228 3.5-.029 5.388a.257.257 0 0 1-.514 0c-.21-1.858-.398-3.549 0-5.389a.272.272 0 0 1 .543 0Zm-1.655-.273c.388 1.897.26 3.508-.01 5.412-.026.28-.514.283-.54 0-.244-1.878-.347-3.54-.01-5.412a.283.283 0 0 1 .56 0Zm-1.668.911c.4 1.268.257 2.292-.026 3.572a.257.257 0 0 1-.514 0c-.241-1.262-.354-2.312-.023-3.572a.283.283 0 0 1 .563 0Z"/></svg>roryj</a>
 			</li>
 			<li>
-				<a target="_blank" class="project-link inconsolata-bold" href="mailto:me@roryj.ca"><svg height="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Proton Mail</title><path d="m15.24 8.998 3.656-3.073v15.81H2.482C1.11 21.735 0 20.609 0 19.223V6.944l7.58 6.38a2.186 2.186 0 0 0 2.871-.042l4.792-4.284h-.003zm-5.456 3.538 1.809-1.616a2.438 2.438 0 0 1-1.178-.533L.905 2.395A.552.552 0 0 0 0 2.826v2.811l8.226 6.923a1.186 1.186 0 0 0 1.558-.024zM23.871 2.463a.551.551 0 0 0-.776-.068l-3.199 2.688v16.653h1.623c1.371 0 2.481-1.127 2.481-2.513V2.824a.551.551 0 0 0-.129-.36z"/></svg>me@roryj.ca</a>
+				<a target="_blank" class="project-link inconsolata-bold" href="mailto:contact@roryj.ca"><svg height="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Proton Mail</title><path d="m15.24 8.998 3.656-3.073v15.81H2.482C1.11 21.735 0 20.609 0 19.223V6.944l7.58 6.38a2.186 2.186 0 0 0 2.871-.042l4.792-4.284h-.003zm-5.456 3.538 1.809-1.616a2.438 2.438 0 0 1-1.178-.533L.905 2.395A.552.552 0 0 0 0 2.826v2.811l8.226 6.923a1.186 1.186 0 0 0 1.558-.024zM23.871 2.463a.551.551 0 0 0-.776-.068l-3.199 2.688v16.653h1.623c1.371 0 2.481-1.127 2.481-2.513V2.824a.551.551 0 0 0-.129-.36z"/></svg>contact@roryj.ca</a>
 			</li>
 		</ul>
             </section>
