--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	</div>
 
         <main class="content inconsolata-regular">
-
             <section id="projects">
                 <h2 class="section-title">projects</h2>
 		<ul class="projects">
@@ -68,7 +67,7 @@
 				<div class="project-details">
 					<p class="project-desc">This project is an all-in-one halloween house application. The app works as a client-server model. The server connects to all of the
 					sensors in the house (we use ring and hue sensors), and the clients connect to light bulbs, speakers and chromecast devices. With the opening and/or
-					closing of a door, we can trigger hand-crafted scenes; playing music, turning lights on and off, spooking our friends.</p>
+					closing of a door, we can trigger hand-crafted scenes; playing music, turning lights on and off, spookin' our friends.</p>
 					<div class="project-links">
 						<a target="_blank" class="project-link inconsolata-bold" href="https://github.com/jmattfong/Halloween"><img height="20" src="https://cdn.simpleicons.org/github?viewbox=auto"/>jmattfong/Halloween</a>
 					</div>
@@ -77,7 +76,8 @@
 			<li>
 				<p class="project-name inconsolata-bold">das-keyboard second screen</p>
 				<div class="project-details">
-					<p class="project-desc">At some point in 2018 I bought the <a target="_blank" href="https://www.daskeyboard.com/p/5q-cloud-connected-rgb-mechanical-keyboard/">DasKeyboard 5Q</a>, which is a keyboard with per-key programmable LEDs. The keyboard would run a
+					<p class="project-desc">At some point in 2018 I bought the <a target="_blank" href="https://www.daskeyboard.com/p/5q-cloud-connected-rgb-mechanical-keyboard/">DasKeyboard 5Q</a>,
+					which is a keyboard with per-key programmable LEDs. The keyboard would run a
 					local server on your connected device which you could send http commands to change key colours. I built an app that you edit and program different images that
 					would scroll across the keyboard. The two base ones I had were a Canadian flag (of course), and a fish moving left to right.</p>
 					<div class="project-links">
