--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		 		<img src="./resources/me.jpeg"/>
 			</div>
 			<div class="bio">
-				<p>I am a Canadian Software Engineer living in Seattle. I like picking and putting down heavy weights,
-				watching and playing music, sailing, hosting elaborate events and working on over-engineered side projects.</p>
+				<p>I am a Canadian Software Engineer living in Seattle.
+				I like watching and playing music, sailing, hosting large-scale elaborate events, and working on over-engineered side projects.</p>
 			</div>
 		</section>
 	</div>
