--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 		 		<img src="./resources/me.jpeg"/>
 			</div>
 			<div class="bio">
-				<p>I am a Canadian Software Engineer living in Seattle.
-				I like watching and playing music, sailing, hosting large-scale elaborate events, and working on over-engineered side projects.</p>
+				<p>My name is Rory Jacob. I am a Canadian Software Engineer living in Seattle since 2013.
+				I like playing music, going to shows, cooking, sailing, hosting large-scale elaborate events, and working on over-engineered side projects.
+				Opinions are my own.</p>
 			</div>
 		</section>
 	</div>
