--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 		 		<img src="./resources/me.jpeg"/>
 			</div>
 			<div class="bio">
-				<p>My name is Rory Jacob. I am a Canadian Software Engineer living in Seattle since 2013.
-				I like playing music, going to shows, cooking, sailing, hosting large-scale elaborate events, and working on over-engineered side projects.
+				<p>My name is Rory Jacob. I am a Canadian living in Seattle since 2013.
+				I make music (sometimes), go to all sorts of shows, like to cook, sail, and  host large-scale elaborate events, and working on over-engineered side projects.
+
+				I am a software engineer by trade. I spent 9+ years at Amazon, with most of those on AWS Lambda. Most recently I worked at a startup called Vendia.
+
 				Opinions are my own.</p>
 			</div>
 		</section>
