Basic setup for posts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- Table of Contents -->
 		<aside class="toc">
 		    <ul>
+			<li><a href="#posts">posts</a></li>
 			<li><a href="#projects">projects</a></li>
 			<li><a href="#links">links</a></li>
 		    </ul>
@@ -37,7 +38,15 @@
 	</div>
 
         <main class="content inconsolata-regular">
-            <section id="projects">
+	    <section class="section" id="posts">
+		<h2 class="section-title">posts</h2>
+		<ul class="posts">
+		    <li>
+			    <a class="inconsolata-regular" href="posts/02-01-2025.html">January 25th. 2025 - New Beginnings</a>
+		    </li>
+		</ul>
+	    </section>
+            <section class="section" id="projects">
                 <h2 class="section-title">projects</h2>
 		<ul class="projects">
 			<li>
@@ -103,7 +112,7 @@
 		</ul>
             </section>
 
-            <section id="links">
+            <section class="section" id="links">
                 <h2 class="section-title">links</h2>
 		<ul class="links">
 			<li>
