More css trickery

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
 		<div class="navigation inconsolata-regular">
-			<h1>artisinal website content</h1>
+			<h1 class="site-title"><a href="../index.html">artisinal website content</a></h1>
 			<!-- Table of Contents -->
 			<aside class="toc">
 				<ul>
@@ -51,7 +51,7 @@
 				<h2 class="section-title">posts</h2>
 				<ul class="posts">
 					<li>
-						<a class="inconsolata-regular" href="posts/02-01-2025.html">January 25th. 2025 - New Beginnings</a>
+						<a class="inconsolata-regular" href="posts/jan-2-2025.html">January 2nd, 2025 - New Beginnings</a>
 					</li>
 				</ul>
 			</section>
