--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<h2 class="section-title">posts</h2>
 				<ul class="posts">
 					<li>
-						<a class="inconsolata-regular" href="posts/jan-2-2025.html">January 2nd, 2025 - New Beginnings</a>
+						<a class="inconsolata-regular" href="posts/jan-2-2025.html">January 2nd, 2025 - New Year, New Beginnings</a>
 					</li>
 				</ul>
 			</section>
